# Creating-Systematology-RAG

./: .dockerignore  .env.remote  .gitignore  .gitmodules  2025-12-06-1_FastAPI-JWT认证功能实现_进度汇总.md  2025-12-06-HF-Inference-API集成-进度存档.md  =1.8.0  AGENTS.md  ALWAYS_ING.md  CLAUDE.md  COMMIT_LOG.md  Dockerfile  FCITX5_RIME_TUTORIAL.md  Makefile  PROJECT_SUMMARY.md  QUICK_FIX_query_return_values.md  README.md  README_NEW.md  ROADMAP_模型切换与多模型支持.md  TESTING_EXAMPLES.md  TODO.md  app.py  application.yml  env.template  main.py  pyproject.toml  pytest.ini  railway.toml  run_test.ps1  run_tests.sh  start_services.py  task  test_chat_api.py  test_gpu_simple.py  test_markdown_formatting.py  test_stream_curl.sh  zeabur.json  开发日志.md
.agent/: project.yaml
.cursor/: SKILLS_MIGRATION_DECISIONS.md  WORKFLOW_COMPONENTS_ANALYSIS.md
.serena/: project.yml
.streamlit/: config.toml
.working-memory/: .checkpoint  board.md  开发日志.md
_DEPRECATED_agent-task-log_2026-04-08/: sync_report_20251109.json
agent-task-log/: 2025-01-27-1_AGENTS-MD全量同步检查_完成总结.md  2025-10-09-1_【bugfix】【completed】测试修复与DeepSeek集成_快速摘要.md  2025-10-09-1_测试修复与DeepSeek集成_详细过程.md  2025-10-09-2_测试修复-编码与Mock优化_详细过程.md  2025-10-10-1_GitHub数据源集成_详细过程.md  2025-10-10-2_功能增强-进度条日志UI_实施方案.md  2025-10-10-2_功能增强-进度条日志UI_详细过程.md  2025-10-10-3_【implementation】【completed】会话自动持久化增强_实施总结.md  2025-10-10-3_【plan】【completed】维基百科集成_实施方案.md  2025-10-10-3_会话自动持久化增强_实施总结.md  2025-10-10-4_【implementation】【completed】UI优化与热加载增强_实施总结.md  2025-10-12_HuggingFace镜像与离线模式配置_实施总结.md  2025-10-12_RAG可观测性集成_实施总结.md  2025-10-12_【implementation】【completed】GitHub数据源架构重构_完成总结.md  2025-10-14-1_RAG推理能力增强_快速摘要.md  2025-10-14-1_RAG推理能力增强_详细过程.md  2025-10-14-3_【bugfix】【completed】索引持久化修复_详细过程.md  2025-10-14-4_UI居中与会话管理优化_实施总结.md  2025-10-14-5_Embedding模型缓存修复_快速摘要.md  2025-10-14-5_UI居中布局真修复_详细过程.md  2025-10-14-6_GitHub导入移至设置页_实施总结.md  2025-10-14-7_【plan】【completed】自动降温_完整方案.md  2025-10-14-今日工作总结.md  2025-10-15-1_【implementation】【completed】UI用户信息移至侧边栏_快速摘要.md  2025-10-15-2_【implementation】【completed】Claude风格UI大改造_实施总结.md  2025-10-22-1_最小化PaaS部署_实施方案.md  2025-10-29-1_修复coverage依赖问题_快速摘要.md  2025-10-29-2_Embedding并行性能优化_实施方案.md  2025-10-29-4_索引构建流程优化分析_技术分析.md  2025-10-29-5_【bugfix】【completed】Qwen3-Embedding模型加载错误修复_快速摘要.md  2025-10-30-1_【bugfix】【completed】GPU加速配置与UV环境冲突解决_详细过程.md  2025-10-30-1_索引批模式条件修复_快速摘要.md  2025-10-30-4_Embedding维度不匹配修复_任务总结.md  2025-10-30-4_Embedding维度不匹配修复_快速摘要.md  2025-10-30-4_Embedding维度不匹配修复_详细过程.md  2025-10-30-6_【implementation】【completed】批处理分组与E2E测试优化_完成总结.md  2025-10-30_【bugfix】【completed】UTF8编码支持实现与测试报告_测试报告.md  2025-10-30_【research】【completed】Chroma后台线程问题诊断与解决方案_解决方案.md  2025-10-31-10_【bugfix】【completed】Prompt+Markdown实施方案设计_实施方案.md  2025-10-31-11_GitHub在线链接功能实施_完成总结.md  (+124 more)
agent-test-log/: 2025-10-09-3_Windows-Make工具安装与Makefile配置_详细过程.md
aha-moments/: 2025-10-14_测试验证比代码实现更重要.md  2025-11-03_Agent-Task-Log的延迟满足价值.md  2025-11-03_从实践中总结方法论.md  2026-01-21_技术命名背后的人性.md  2026-01-22_无用之用的智慧.md  2026-01-22_模型选择的重要性.md
api/: __init__.py  deps.py  main.py  schemas.py
backend/: __init__.py
data/: cache_state.json  github_sync_state.json  keyword_cloud.json  keyword_cloud_parsed_files.json
docs/: API.md  ARCHITECTURE.md  BGE模型系列评估.md  CACHE_ANALYSIS.md  CHANGELOG.md  CLDFlow-architecture.md  CLDFlow-defaults.md  CLDFlow-invariants.md  CURSOR_DEBUG_GUIDE.md  DECISIONS.md  DEEPSEEK_REASONING_VERIFICATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOC_REFACTOR_PLAN.md  EMBEDDING_COST_ANALYSIS.md  IDE_DEBUG_COMPARISON.md  INDEX.md  JOURNEY.md  PROJECT_STRUCTURE.md  QUERY_PROCESSING.md  QUICKSTART.md  README.md  RETRIEVAL_STRATEGY_FLOW.md  STREAMING_TEST_GUIDE.md  TESTING_GUIDE.md  TEST_QUICKSTART.md  TODO.md  TRACKER.md  UI_ANALYSIS.md  ZEABUR_DEPLOYMENT.md  architecture.md  brainstorm-product-direction-2026-04-10.md  competitive-landscape-2026-04-10.md  core-beliefs.md  llamadebug_available_info.md  mcp-tools-landscape.md  metasynthesis-architecture-insight-2026-04-10.md  performance-optimization-ragservice.md  quick-start-advanced.md  streamlit-design-inspiration.md  (+1 more)
examples/: vector_version_demo.py
exports/: agent_task_log_export.csv
frontend/: __init__.py  config.py  main.py
linux-ime-config/: IME_INSTALL_GUIDE.md  LINUX_IME_COMPARISON.md  README.md  install_ime_commands.sh  install_multiple_ime.sh  install_sogou_pinyin.sh  setup_fcitx5_rime.sh
pages/: 1_⚙️_设置.py  2_文件查看.py  2_📄_文件查看.py  3_🔎_Chroma_Viewer.py
prompts/: README.md
scripts/: analyze_bugs.py  build_keyword_cloud.py  chroma_inspect.py  docker-run.sh  (+6 more)
(+1239 files in other folders)
