[project]
name = "creating-systematology-rag"
version = "0.1.0"
description = "基于LlamaIndex的系统科学知识库RAG应用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.3",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-llms-deepseek>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-readers-web>=0.2.0",
    "langchain-community>=0.3.0",
    "streamlit>=1.50.0",
    "chromadb>=0.5.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-llama-index>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "coverage>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
